rke2.d/catalog/cicd/tekton-dashboard/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: tekton-dashboard-strip
  namespace: tekton-pipelines
spec:
  stripPrefix:
    prefixes:
      - /tekton
